--- a/mhw1.html
+++ b/mhw1.html
@@ -3,10 +3,10 @@
 <html lang="it">
 <head>
     <meta charset="utf-8" />
-    <title>Mini Homework 1</title>
+    <title>Mini_Homework_1</title>
     <meta data="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="mhw1.css" />
-    <link href="https://fonts.googleapis.com/css2" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alkatra|Lato|Calistoga|Pridi|Open Sans">
 </head>
 <body>
     <nav>
@@ -57,7 +57,6 @@
             
         </div>
     </section>
- 
 
     <footer>
         <p> Giuseppe Raineri O46002011</p>
